Register error from error stream of verifytga